마지막 프로젝트/개발 코드/kubernetes/kubernetes/gcp/lookup_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookup-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lookup-deployment
  template:
    metadata:
      name: lookup-deployment
      labels:
        app: lookup-deployment
    spec:
      containers:
      - name: lookup-deployment-container
        image: clownpark/lookup_api:v11
        ports:
          - containerPort: 80
