마지막 프로젝트/개발 코드/kubernetes/kubernetes/gcp/lookup_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lookup-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: lookup-deployment
  ports:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
