마지막 프로젝트/개발 코드/kubernetes/kubernetes/gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bmo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /signup/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: signup-svc
            port:
              number: 80
      - path: /lookup/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: lookup-svc
            port:
              number: 80
